adding users api to api-docs endpoint
